Fixes email overflow

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -409,5 +409,7 @@ button:focus {
 
     .links {
         display: flex;
+        flex-direction: column;
     }
+
 }
